--- a/.github/workflows/greeting.yml
+++ b/.github/workflows/greeting.yml
@@ -5,7 +5,6 @@ on:
 jobs:
   greeting:
     runs-on: ubuntu-latest
-    steps:
-      - uses: mortenp1337/actions-semantic-release/.github/workflows/release-greeting-action.yml@greeting-action-v1.1.0
+    uses: mortenp1337/actions-semantic-release/.github/workflows/release-greeting-action.yml@greeting-action-v1.1.0
 
 
