fix workflow again

--- a/.github/workflows/greeting.yml
+++ b/.github/workflows/greeting.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   greeting:
     runs-on: ubuntu-latest
-    uses: mortenp1337/actions-semantic-release/.github/workflows/release-greeting-action.yml@greeting-action-v1.1.0
+    steps:
+      - uses: mortenp1337/actions-semantic-release/greeting-action.yml@greeting-action-v1.1.0
 
-
+      
