--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,8 @@ jobs:
       - uses: mortenp1337/actions-semantic-release/greeting-action@greeting-action-v1.0.0
       - uses: mortenp1337/actions-semantic-release/greeting-action@greeting-action-v1.1.0
       - uses: mortenp1337/actions-semantic-release/farewell-action@farewell-action-v1.0.0
-      - uses: mortenp1337/actions-semantic-release/farewell-action
+      - uses: mortenp1337/actions-semantic-release/farewell-action@greeting-action-v1
         with: 
-          person: 'No version specified'
+          person: 'v1 specified'
 
       
